--- a/.devContainer/docker-compose.yaml
+++ b/.devContainer/docker-compose.yaml
@@ -13,9 +13,9 @@ services:
     ports:
       - 9001:80
 
-    volumes:
-      - ./source_code:/root/source_code
-      - vscode-server:/root/.vscode-server
+    # volumes:
+    #   - ./source_code:/root/source_code
+    #   - vscode-server:/root/.vscode-server
 
     environment:
       - HOST=0.0.0.0
