--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -22,7 +22,7 @@ jobs:
 
       # Build the Docker image for testing
       - name: Build Docker image for testing
-        run: docker build -t carpredictionasgthree -f .devContainer/.Dockerfile .
+        run: docker build -t carpredictionasgthree -f .Dockerfile .
 
       # Run tests inside the Docker container
       - name: Run tests in Docker
@@ -44,7 +44,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       # Build the Docker image for the app
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/carpredictionasgthree:latest -f .devContainer/.Dockerfile .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/carpredictionasgthree:latest -f .Dockerfile .
       # Push the image to DockerHub
       - name: Push Docker image to DockerHub
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/carpredictionasgthree:latest
