--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -37,17 +37,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       # Log in to DockerHub
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       # Build the Docker image for the app
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/carpredictionasgthree:latest -f .Dockerfile .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/carpredictionasgthree:latest -f .Dockerfile .
       # Push the image to DockerHub
       - name: Push Docker image to DockerHub
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/carpredictionasgthree:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/carpredictionasgthree:latest
 
   deploy:
     needs: build
