--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -53,7 +53,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: SSH Remote Commands
+      - name: ssh key passphrase
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ vars.HOST }}
