--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -53,18 +53,18 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: ssh key passphrase
+      - name: SSH Remote Commands
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ vars.HOST }}
           username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          password: ${{ secrets.PASSWORD }}
           passphrase: ${{ secrets.PASSPHRASE }}
           proxy_host: ${{ vars.PROXY_HOST }}
           proxy_username: ${{ secrets.USERNAME }}
           proxy_key: ${{ secrets.PROXY_KEY }}
-          
+          proxy_port: 22
           script: |
             docker pull sachinmalego/carpredictionasgthree:latest
             docker compose -f st125171/docker-compose.yaml down --remove-orphans
