--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -48,27 +48,7 @@ jobs:
       # Push the image to DockerHub
       - name: Push Docker image to DockerHub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/carpredictionasgthree:latest
-
-  # deploy:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: ssh proxy command
-  #       uses: appleboy/ssh-action@v1.1.0
-  #       with:
-  #         proxy_host: ${{ vars.PROXY_HOST }}
-  #         proxy_username: ${{ secrets.USERNAME }}
-  #         proxy_password: ${{ secrets.PASSWORD }}
-  #         host: ${{ vars.HOST }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.SSH_PRIVATE_KEY }}
-  #         password: ${{ secrets.PASSWORD }}
-  #         passphrase: ${{ secrets.PASSPHRASE }}
-  #         script: |
-  #           docker pull sachinmalego/carpredictionasgthree:latest
-  #           docker compose -f st125171/docker-compose.yaml down --remove-orphans
-  #           docker compose -f st125171/docker-compose.yaml up -d
-
+        
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -94,7 +74,7 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}  # Required for passphrase-protected key
           proxy_host: ${{ vars.PROXY_HOST }}
           proxy_username: ${{ secrets.USERNAME }}
-          proxy_password: ${{ secrets.PASSWORD }}
+          proxy_password: ${{ secrets.PROXY_PASSWORD }}
           proxy_port: 22
           script: |
             docker pull sachinmalego/carpredictionasgthree:latest
