--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -48,7 +48,7 @@ jobs:
       # Push the image to DockerHub
       - name: Push Docker image to DockerHub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/carpredictionasgthree:latest
-        
+  
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -64,19 +64,25 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
           ssh-passphrase: ${{ secrets.PASSPHRASE }}  # If the key is passphrase-protected
 
-      # Execute the deployment commands over SSH
+      # Create SSH config for proxy jump
+      - name: Set up SSH config
+        run: |
+          echo -e "Host jump-proxy\n  HostName ${{ vars.PROXY_HOST }}\n  User ${{ secrets.USERNAME }}\n  Port 22\n  PasswordAuthentication yes\n" >> ~/.ssh/config
+          echo -e "Host target-server\n  HostName ${{ vars.HOST }}\n  User ${{ secrets.USERNAME }}\n  ProxyJump jump-proxy\n" >> ~/.ssh/config
+
+      # Install sshpass for password authentication through proxy
+      - name: Install sshpass
+        run: sudo apt-get install -y sshpass
+
+      # Execute the deployment commands over SSH with proxy jump
       - name: Deploy via SSH
-        uses: appleboy/ssh-action@v1.1.0
-        with:
-          host: ${{ vars.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}  # Required for passphrase-protected key
-          proxy_host: ${{ vars.PROXY_HOST }}
-          proxy_username: ${{ secrets.USERNAME }}
-          proxy_password: ${{ secrets.PROXY_PASSWORD }}
-          proxy_port: 22
-          script: |
+        run: |
+          sshpass -p "${{ secrets.PROXY_PASSWORD }}" ssh -o StrictHostKeyChecking=no target-server << EOF
             docker pull sachinmalego/carpredictionasgthree:latest
             docker compose -f st125171/docker-compose.yaml down --remove-orphans
             docker compose -f st125171/docker-compose.yaml up -d
+          EOF
+
+
+
+    
