--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -58,10 +58,12 @@ jobs:
         uses: actions/checkout@v3
 
       # Install ssh-agent to manage the SSH key
-      - name: Set up SSH agent
-        uses: webfactory/ssh-agent@v0.5.4
+      - name: ssh key passphrase
+        uses: appleboy/ssh-action@v1.1.0
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          username: ${{ secrets.USERNAME }}
+          passphrase: ${{ secrets.PASSPHRASE }}
       
       # Add the SSH key to the agent with the passphrase
       - name: Add SSH key with passphrase
