--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,97 +1,79 @@
+# Name of this workflow
 name: Dash App CI
-
+# Name of this run
+run-name: ${{ github.actor }} Building and Testing
+# When this action will be trigger
+# I want to do this when we push new change with tag.
+# This tag will be used next when we build and push the image to dockerhub
 on:
   push:
     branches:
       - main
-
-
+    tags:
+      - "v*"
+# There can be multiple jobs
 jobs:
-  # Step 1: Test the app using Docker
-  test:
+  # Job name
+  build-test:
+    # Target machine that this job will run on.
+    # ubuntu-latest or ubuntu-22.04 is the same image (as is August 2023)
     runs-on: ubuntu-latest
-
+    # Tasks, specify in list.
     steps:
-      # Checkout the code
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Set up Docker
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      # Build the Docker image for testing
-      - name: Build Docker image for testing
-        run: docker build -t carpredictionasgthree -f .Dockerfile .
-
-      # Run tests inside the Docker container
-      - name: Run tests in Docker
-        run: docker run carpredictionasgthree pytest
-
-  build:
-    runs-on: ubuntu-latest
-    needs: test  # Build only after tests pass
-    
-    steps:
-      # Checkout the code
-      - name: Checkout code
-        uses: actions/checkout@v3
-      # Log in to DockerHub
+      # https://github.com/actions/checkout: will clone Git into the image
+      - uses: actions/checkout@v4
+      # Execute terminal command.
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v2.0
+        with:
+          envkey_MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
+          envkey_APP_MODEL_NAME: ${{ secrets.APP_MODEL_NAME }}
+          file_name: .env
+          fail_on_empty: true
+          sort_keys: true
+      - name: Build the Docker image
+        run: docker compose build
+      - name: Compose up
+        run: docker compose up -d
+      # Execute pytest
+      - name: Testing
+        run: docker compose exec -it dash pytest --ignore=test_model_staging.py -v
+      # If the testing pass, upload the image
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      # Build the Docker image for the app
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/carpredictionasgthree:latest -f .Dockerfile .
-      # Push the image to DockerHub
-      - name: Push Docker image to DockerHub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/carpredictionasgthree:latest
-  
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          # Your image name
+          images: sachinmalego/carpredictionasgthree:latest
+          tags: type=semver,pattern={{raw}}
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: .Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
   deploy:
-    needs: build
+    needs: build-test
     runs-on: ubuntu-latest
     steps:
-      # Checkout the code
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Install ssh-agent to manage the SSH key
-      - name: ssh key passphrase
-        uses: appleboy/ssh-action@v1.1.0
+      - name: SSH Remote Commands
+        uses: appleboy/ssh-action@v1.0.0
         with:
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          host: ${{ vars.HOST }}
           username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
-      
-      # Add the SSH key to the agent with the passphrase
-      - name: Add SSH key with passphrase
-        env:
-          PASSPHRASE: ${{ secrets.PASSPHRASE }}
-        run: |
-          echo "$PASSPHRASE" | ssh-add - <<< "${{ secrets.SSH_PRIVATE_KEY }}"
-      
-      # Create SSH config for proxy jump
-      - name: Set up SSH config
-        run: |
-          echo -e "Host jump-proxy\n  HostName ${{ vars.PROXY_HOST }}\n  User ${{ secrets.USERNAME }}\n  Port 22\n  PasswordAuthentication yes\n" >> ~/.ssh/config
-          echo -e "Host target-server\n  HostName ${{ vars.HOST }}\n  User ${{ secrets.USERNAME }}\n  ProxyJump jump-proxy\n" >> ~/.ssh/config
-
-      # Install sshpass for password authentication through proxy
-      - name: Install sshpass
-        run: sudo apt-get install -y sshpass
-
-      # Execute the deployment commands over SSH with proxy jump
-      - name: Deploy via SSH
-        run: |
-          sshpass -p "${{ secrets.PROXY_PASSWORD }}" ssh -o StrictHostKeyChecking=no target-server << EOF
-            docker pull sachinmalego/carpredictionasgthree:latest
-            docker compose -f st125171/docker-compose.yaml down --remove-orphans
-            docker compose -f st125171/docker-compose.yaml up -d
-          EOF
-
-
-
-
-        
+          proxy_host: ${{ vars.PROXY_HOST }}
+          proxy_username: ${{ secrets.USERNAME }}
+          proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            tag=${{ github.ref_name }} docker compose -f st125171/docker-compose.yaml down
+            tag=${{ github.ref_name }} docker compose -f st125171/docker-compose.yaml up -d
