--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,65 +1,56 @@
-# Name of this workflow
 name: Dash App CI
-# Name of this run
-run-name: ${{ github.actor }} Building and Testing
-# When this action will be trigger
-# I want to do this when we push new change with tag.
-# This tag will be used next when we build and push the image to dockerhub
+
 on:
   push:
     branches:
       - main
-# There can be multiple jobs
+
+
 jobs:
-  # Job name
-  build-test:
-    # Target machine that this job will run on.
-    # ubuntu-latest or ubuntu-22.04 is the same image (as is August 2023)
+  # Step 1: Test the app using Docker
+  test:
     runs-on: ubuntu-latest
-    # Tasks, specify in list.
+
     steps:
-      # https://github.com/actions/checkout: will clone Git into the image
-      - uses: actions/checkout@v4
-      # Execute terminal command.
-      - name: Make envfile
-        uses: SpicyPizza/create-envfile@v2.0
-        with:
-          envkey_MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
-          envkey_APP_MODEL_NAME: ${{ secrets.APP_MODEL_NAME }}
-          file_name: .env
-          fail_on_empty: true
-          sort_keys: true
-      - name: Build the Docker image
-        run: docker compose build
-      - name: Compose up
-        run: docker compose up -d
-      # Execute pytest
-      - name: Testing
-        run: docker compose exec -it dash pytest --ignore=test_model_staging.py -v
-      # If the testing pass, upload the image
+      # Checkout the code
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Set up Docker
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      # Build the Docker image for testing
+      - name: Build Docker image for testing
+        run: docker build -t carpredictionasgthree -f .Dockerfile .
+
+      # Run tests inside the Docker container
+      - name: Run tests in Docker
+        run: docker run carpredictionasgthree pytest
+
+  build:
+    runs-on: ubuntu-latest
+    needs: test  # Build only after tests pass
+    
+    steps:
+      # Checkout the code
+      - name: Checkout code
+        uses: actions/checkout@v3
+      # Log in to DockerHub
       - name: Login to Docker Hub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v3
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          # Your image name
-          images: sachinmalego/carpredictionasgthree:latest
-          tags: type=semver,pattern={{raw}}
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: .Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
+      # Build the Docker image for the app
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/carpredictionasgthree:latest -f .Dockerfile .
+      # Push the image to DockerHub
+      - name: Push Docker image to DockerHub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/carpredictionasgthree:latest
+        
   deploy:
-    needs: build-test
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: SSH Remote Commands
