--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       # Log in to DockerHub
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -48,7 +48,7 @@ jobs:
       # Push the image to DockerHub
       - name: Push Docker image to DockerHub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/carpredictionasgthree:latest
-        
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -62,7 +62,8 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           proxy_host: ${{ vars.PROXY_HOST }}
           proxy_username: ${{ secrets.USERNAME }}
-          proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          proxy_key: ${{ secrets.PROXY_KEY }}
           script: |
-            tag=${{ github.ref_name }} docker compose -f st125171/docker-compose.yaml down
-            tag=${{ github.ref_name }} docker compose -f st125171/docker-compose.yaml up -d
+            docker pull sachinmalego/carpredictionasgthree:latest
+            docker compose -f st125171/docker-compose.yaml down --remove-orphans
+            docker compose -f st125171/docker-compose.yaml up -d
