--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -56,6 +56,7 @@ jobs:
       - name: ssh proxy command
         uses: appleboy/ssh-action@v1.0.0
         with:
+          host: ${{ vars.HOST }}
           proxy_host: ${{ vars.PROXY_HOST }}
           proxy_username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PROXY_PASSWORD }}
