--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -7,10 +7,10 @@ run-name: ${{ github.actor }} Building and Testing
 # This tag will be used next when we build and push the image to dockerhub
 on:
   push:
-    branches:
-      - main
     tags:
       - 'v*'
+    branches:
+      - main
 # There can be multiple jobs
 jobs:
   # Job name
@@ -37,7 +37,7 @@ jobs:
         run: docker compose up -d
       # Execute pytest
       - name: Testing
-        run: docker compose exec -it dash pytest --ignore=test_model_staging.py -v
+        run: docker compose exec -it dash pytest test_model_staging.py -v
       # If the testing pass, upload the image
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -52,7 +52,7 @@ jobs:
         with:
           # Your image name
           images: sachinmalego/carpredictionasgthree
-          tags: type=semver,pattern={{raw}}
+          tags: ${{ github.ref_name }}
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
@@ -65,17 +65,18 @@ jobs:
     needs: build-test
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: SSH Remote Commands
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ vars.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
           proxy_host: ${{ vars.PROXY_HOST }}
           proxy_username: ${{ secrets.USERNAME }}
           proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            tag=${{ github.ref_name }} docker compose -f st125171/docker-compose.yaml down
-            tag=${{ github.ref_name }} docker compose -f st125171/docker-compose.yaml up -d
+            tag=${{ github.ref_name }} docker compose -f st124959/docker-compose-a3.yaml down
+            tag=${{ github.ref_name }} docker compose -f st124959/docker-compose-a3.yaml up -d
   
