--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -63,8 +63,9 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           proxy_host: ${{ vars.PROXY_HOST }}
           proxy_username: ${{ secrets.USERNAME }}
-          proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          proxy_key: ${{ secrets.PROXY_KEY }}
           script: |
-            tag=${{ github.ref_name }} docker compose -f st125171/docker-compose-a3.yaml down
-            tag=${{ github.ref_name }} docker compose -f st125171/docker-compose-a3.yaml up -d
-  
+            docker pull sachinmalego/carpredictionasgthree:latest
+            docker compose -f st125171/st125171_3/docker-compose.yaml down --remove-orphans
+            docker compose -f st125171/st125171_3/docker-compose.yaml up -d
+    
