--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,56 +1,58 @@
-name: Dash App CI
-
+# Name of this workflow
+name: Build-Test
+# Name of this run
+run-name: ${{ github.actor }} Building and Testing
+# When this action will be trigger
+# I want to do this when we push new change with tag.
+# This tag will be used next when we build and push the image to dockerhub
 on:
   push:
-    branches:
-      - main
-
+    tags:
+      - 'v*'
+# There can be multiple jobs
 jobs:
-  # Step 1: Test the app using Docker
-  test:
+  # Job name
+  build-test:
+    # Target machine that this job will run on.
+    # ubuntu-latest or ubuntu-22.04 is the same image (as is August 2023)
     runs-on: ubuntu-latest
-
+    # Tasks, specify in list.
     steps:
-      # Checkout the code
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Set up Docker
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      # Build the Docker image for testing
-      - name: Build Docker image for testing
-        run: docker build -t carpredictionasgthree -f .Dockerfile .
-
-      # Run tests inside the Docker container
-      - name: Run tests in Docker
-        run: docker run carpredictionasgthree pytest
-
-  build:
-    runs-on: ubuntu-latest
-    needs: test  # Build only after tests pass
-    
-    steps:
-      # Checkout the code
-      - name: Checkout code
-        uses: actions/checkout@v3
-      # Log in to DockerHub
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
+      # https://github.com/actions/checkout: will clone Git into the image
+      - uses: actions/checkout@v4   #library that's why is "uses"
+      # - name: Build the Docker image
+      #   run: docker compose build   # "run" is used as command line
+      #   working-directory: ./.streamlit
+  #     # - name: Compose up
+  #       run: docker compose up -d
+  #     # Execute pytest
+  #     - name: Testing
+  #       run: docker compose exec -it dash pytest --ignore=test_model_staging.py -v
+  #     # If the testing pass, upload the image
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      # Build the Docker image for the app
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/carpredictionasgthree:latest -f .Dockerfile .
-      # Push the image to DockerHub
-      - name: Push Docker image to DockerHub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/carpredictionasgthree:latest
-  
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          # Your image name
+          images: sachinmalego/carpredictionasgthree
+          tags: type=semver,pattern={{raw}}
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: "{{defaultContext}}:.streamlit"
+          file: Dockerfile.streamlit
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
   deploy:
-    #environment: Production
-    needs: build
+    # environment: Production
+    needs: build-test
     runs-on: ubuntu-latest
     steps:
       - name: SSH Remote Commands
@@ -62,8 +64,11 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           proxy_host: ${{ vars.PROXY_HOST }}
           proxy_username: ${{ secrets.USERNAME }}
-          proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          proxy_key: ${{ secrets.KEY }}
           proxy_passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            tag=${{ github.ref_name }} docker compose -f st125171/docker-compose.yaml down
-            tag=${{ github.ref_name }} docker compose -f st125171/docker-compose.yaml up -d
+            tag=${{ github.ref_name }} docker compose -f st124960/docker-compose.yaml down
+            tag=${{ github.ref_name }} docker compose -f st124960/docker-compose.yaml up -d
+          
+          
+          # debug: true 
