--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,24 @@ services:
     environment:
       - HOST=0.0.0.0
       - PORT=80
+
+    labels:
+      # Allow Traefik to talk with your service
+      - traefik.enable=true
+      # Tell Traefik to use port 80
+      - traefik.http.services.web-st125171-st125171.loadbalancer.server.port=8501
+      # This config you domain name. By default, your subdomain is <service_name>-<folder_name>
+      # If you which to change the subdomain name, you uncomment the below configuration
+      - traefik.http.routers.web-st125171-st125171.rule=Host(`st125171.ml.brain.cs.ait.ac.th`)
+      # Below is for enable SSL.
+      - traefik.http.routers.web-st125171-st125171.tls=true
+      - traefik.http.routers.web-st125171-st125171.tls.certresolver=production
+      - traefik.http.routers.web-st125171-st125171.entrypoints=websecure
+    # This define network. You would need to keep it like this.
+
+    networks:
+      - default
+      - traefik_default
     
     env_file:
       - .env
@@ -27,3 +45,9 @@ services:
 volumes:
   # needed by the devcontainer
   vscode-server:
+
+# Keep it like this too.
+networks:
+  default:
+  traefik_default:
+    external: true
