--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -57,11 +57,13 @@ jobs:
         with:
           host: ${{ vars.HOST }}
           username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           proxy_host: ${{ vars.PROXY_HOST }}
           proxy_username: ${{ secrets.USERNAME }}
-          proxy_key: ${{ secrets.KEY }}
+          proxy_password: ${{ secrets.PROXY_PASSWORD }}
+          proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
           proxy_passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             docker pull sachinmalego/carpredictionasgthree:latest
