--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -67,7 +67,7 @@ jobs:
           proxy_passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             docker pull sachinmalego/carpredictionasgthree:latest
-            docker compose -f st125171/docker-compose.yaml down --remove-orphans 
+            docker compose -f st125171_4/docker-compose.yaml down --remove-orphans 
             docker compose -f st125171/docker-compose.yaml up -d
           
           
